--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.joml/joml
     implementation("org.joml:joml:1.10.8")
 
+    implementation("com.google.code.gson:gson:2.13.2")
+
     // This dependency is used by the application.
     implementation libs.guava
 }
