improve title screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.12.1'
 
+    //implementation("org.lwjglx:lwjgl3-awt:0.2.3")
+
     // This dependency is used by the application.
     implementation libs.guava
 
@@ -53,6 +55,7 @@ dependencies {
 	implementation "org.lwjgl:lwjgl-openal::$lwjglNatives"
 	implementation "org.lwjgl:lwjgl-opengl::$lwjglNatives"
 	implementation "org.lwjgl:lwjgl-stb::$lwjglNatives"
+    implementation "org.lwjglx:lwjgl3-awt:0.1.8"
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
