--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,16 +46,19 @@ dependencies {
 	implementation "org.lwjgl:lwjgl"
 	implementation "org.lwjgl:lwjgl-assimp"
 	implementation "org.lwjgl:lwjgl-glfw"
+	implementation "org.lwjgl:lwjgl-nuklear"
 	implementation "org.lwjgl:lwjgl-openal"
 	implementation "org.lwjgl:lwjgl-opengl"
 	implementation "org.lwjgl:lwjgl-stb"
-	implementation "org.lwjgl:lwjgl::$lwjglNatives"
-	implementation "org.lwjgl:lwjgl-assimp::$lwjglNatives"
-	implementation "org.lwjgl:lwjgl-glfw::$lwjglNatives"
-	implementation "org.lwjgl:lwjgl-openal::$lwjglNatives"
-	implementation "org.lwjgl:lwjgl-opengl::$lwjglNatives"
-	implementation "org.lwjgl:lwjgl-stb::$lwjglNatives"
-    implementation "org.lwjglx:lwjgl3-awt:0.1.8"
+	implementation "org.lwjgl:lwjgl::natives-windows"
+	implementation "org.lwjgl:lwjgl-assimp::natives-windows"
+	implementation "org.lwjgl:lwjgl-glfw::natives-windows"
+	implementation "org.lwjgl:lwjgl-nuklear::natives-windows"
+	implementation "org.lwjgl:lwjgl-openal::natives-windows"
+	implementation "org.lwjgl:lwjgl-opengl::natives-windows"
+	implementation "org.lwjgl:lwjgl-stb::natives-windows"
+	implementation "org.lwjglx:lwjgl3-awt:0.1.8"
+    implementation "io.github.spair:imgui-java-app:1.90.0"
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
