--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -28,3 +28,13 @@ Pos=490,260
 Size=300,330
 Collapsed=0
 
+[Window][level 1 test npc 1]
+Pos=340,470
+Size=600,200
+Collapsed=0
+
+[Window][level 1 test npc 0]
+Pos=340,470
+Size=600,200
+Collapsed=0
+
