add dialogue editing to editor

--- a/editor/app/imgui.ini
+++ b/editor/app/imgui.ini
@@ -38,3 +38,18 @@ Pos=340,470
 Size=600,200
 Collapsed=0
 
+[Window][Level Editor]
+Pos=10,20
+Size=300,860
+Collapsed=0
+
+[Window][Dialogue Editor]
+Pos=650,20
+Size=730,860
+Collapsed=0
+
+[Window][Animation Editor]
+Pos=650,20
+Size=730,860
+Collapsed=0
+
