added relative 3d object rendering

--- a/editor/app/imgui.ini
+++ b/editor/app/imgui.ini
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][Level Editor]
 Pos=10,20
-Size=300,860
+Size=400,1045
 Collapsed=0
 
 [Window][Dialogue Editor]
@@ -51,5 +51,25 @@ Collapsed=0
 [Window][Animation Editor]
 Pos=650,20
 Size=730,860
+Collapsed=0
+
+[Window][Entity Editor]
+Pos=650,20
+Size=500,500
+Collapsed=0
+
+[Window][3D Objects]
+Pos=415,750
+Size=1272,315
+Collapsed=0
+
+[Window][3d Object Editor]
+Pos=650,20
+Size=500,500
+Collapsed=0
+
+[Window][Camera Position]
+Pos=1702,20
+Size=200,350
 Collapsed=0
 
