improve editor ux

--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -43,3 +43,13 @@ Pos=340,470
 Size=600,200
 Collapsed=0
 
+[Window][level 0 test npc 1]
+Pos=340,470
+Size=600,200
+Collapsed=0
+
+[Window][level 0 test npc 2]
+Pos=340,470
+Size=600,200
+Collapsed=0
+
