--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@
  */
 
 plugins {
+    id 'java'
+    id 'com.gradleup.shadow' version '8.3.9' // Use the latest version
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
 }
@@ -17,6 +19,7 @@ repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
     maven { url 'https://repo1.maven.org/maven2/'}
+    gradlePluginPortal()
 }
 
 dependencies {
@@ -62,6 +65,7 @@ dependencies {
 
     // Source: https://mvnrepository.com/artifact/org.json/json
     implementation 'org.json:json:20251224'
+
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -74,4 +78,16 @@ java {
 application {
     // Define the main class for the application.
     mainClass = 'fbla.game.main'
+}
+
+tasks.named('jar', Jar) {
+  manifest {
+    attributes 'Main-Class': 'fbla.game.main'
+  }
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'fbla.game.main'
+    }
 }
