update readme and build jar for editor

--- a/imgui.ini
+++ b/imgui.ini
@@ -48,3 +48,18 @@ Pos=340,470
 Size=600,200
 Collapsed=0
 
+[Window][Level Editor]
+Pos=10,20
+Size=400,1045
+Collapsed=0
+
+[Window][3D Objects]
+Pos=415,750
+Size=1272,315
+Collapsed=0
+
+[Window][Camera Position]
+Pos=1702,20
+Size=200,700
+Collapsed=0
+
