--- a/editor/app/build.gradle
+++ b/editor/app/build.gradle
@@ -6,8 +6,10 @@
  */
 
 plugins {
+    id 'java'
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'com.gradleup.shadow' version '8.3.9' // Use the latest version
 }
 
 project.ext.lwjglVersion = "3.3.6"
@@ -17,6 +19,7 @@ repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
     maven { url 'https://repo1.maven.org/maven2/'}
+    gradlePluginPortal()
 }
 
 dependencies {
